crates/tmark-writers/tests/snapshots/fixtures__role-aside-deprecated@typst.snap
---
source: crates/tmark-writers/tests/fixtures.rs
expression: snapshot
---
Hooke's law#ts-aside(side: "left")[linear only] holds.

---requires---
{
  "packages": [
    "epigraph",
    "graphicx",
    "marginnote",
    "multicol",
    "progressbar",
    "xcolor"
  ],
  "fragments": [
    "ts-typesetting"
  ],
  "shell_escape": false,
  "assets": [],
  "bibliography": false,
  "citations": [],
  "acronyms": [],
  "index": [],
  "counters": []
}
