crates/tmark-writers/tests/snapshots/fixtures__role-aside@latex.snap
---
source: crates/tmark-writers/tests/fixtures.rs
expression: snapshot
---
Hooke's law\tsaside[side=left]{linear only at small strain} holds.

---requires---
{
  "packages": [
    "epigraph",
    "graphicx",
    "marginnote",
    "multicol",
    "progressbar",
    "xcolor"
  ],
  "fragments": [
    "ts-typesetting"
  ],
  "shell_escape": false,
  "assets": [],
  "bibliography": false,
  "citations": [],
  "acronyms": [],
  "index": [],
  "counters": []
}
