crates/tmark-writers/tests/snapshots/fixtures__role-aside@typst.snap
---
source: crates/tmark-writers/tests/fixtures.rs
expression: snapshot
---
Hooke's law#ts-aside(side: "left")[linear only at small strain] holds.

---requires---
{
  "packages": [],
  "fragments": [
    "ts-typesetting"
  ],
  "shell_escape": false,
  "assets": [],
  "bibliography": false,
  "citations": [],
  "acronyms": [],
  "index": [],
  "counters": []
}
