crates/tmark-writers/tests/snapshots/fixtures__role-code@latex.snap
---
source: crates/tmark-writers/tests/fixtures.rs
expression: snapshot
---
Call \tscodeinline[lang=py]{print(1)} or \tscodeinline[lang=py]{print(1)} but never \tscodeinline{rm -\allowbreak{}rf}.

---requires---
{
  "packages": [],
  "fragments": [
    "ts-code"
  ],
  "shell_escape": false,
  "assets": [],
  "bibliography": false,
  "citations": [],
  "acronyms": [],
  "index": [],
  "counters": []
}
