crates/tmark-writers/tests/snapshots/fixtures__role-code@typst.snap
---
source: crates/tmark-writers/tests/fixtures.rs
expression: snapshot
---
Call #raw(lang: "py", "print(1)") or #raw(lang: "py", "print(1)") but never `rm -rf`.

---requires---
{
  "packages": [],
  "fragments": [],
  "shell_escape": false,
  "assets": [],
  "bibliography": false,
  "citations": [],
  "acronyms": [],
  "index": [],
  "counters": []
}
