crates/tmark-writers/tests/snapshots/fixtures__role-index-deprecated@latex.snap
---
source: crates/tmark-writers/tests/fixtures.rs
expression: snapshot
---
Relativity\tsindex[registry=physics]{relativity}.

---requires---
{
  "packages": [
    "imakeidx"
  ],
  "fragments": [
    "ts-index"
  ],
  "shell_escape": false,
  "assets": [],
  "bibliography": false,
  "citations": [],
  "acronyms": [],
  "index": [
    "physics"
  ],
  "counters": []
}
