crates/tmark-writers/tests/snapshots/fixtures__role-index-deprecated@typst.snap
---
source: crates/tmark-writers/tests/fixtures.rs
expression: snapshot
---
Relativity#ts-index([relativity], registry: "physics").

---requires---
{
  "packages": [],
  "fragments": [
    "ts-index"
  ],
  "shell_escape": false,
  "assets": [],
  "bibliography": false,
  "citations": [],
  "acronyms": [],
  "index": [
    "physics"
  ],
  "counters": []
}
