crates/tmark-writers/tests/snapshots/fixtures__role-index-suffix-deprecated@latex.snap
---
source: crates/tmark-writers/tests/fixtures.rs
expression: snapshot
---
Relativity\tsindex[main]{relativity} and\tsindex{Einstein!papers@\emph{papers}}.

---requires---
{
  "packages": [
    "imakeidx"
  ],
  "fragments": [
    "ts-index"
  ],
  "shell_escape": false,
  "assets": [],
  "bibliography": false,
  "citations": [],
  "acronyms": [],
  "index": [
    ""
  ],
  "counters": []
}
